force-app/main/default/objects/Person_Fund__c/Person_Fund__c.object-meta.xml
<CustomObject>
    <label>Person Fund</label>
    <nameField>
        <label>Person Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Person Funds</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>