force-app/main/default/objects/Person_Fund__c/fields/Adjustment_Log__c.field-meta.xml
<CustomField>
    <fullName>Adjustment_Log__c</fullName>
    <label>Adjustment Log</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>