force-app/main/default/objects/Person_Fund__c/fields/Opening_Balance_Date__c.field-meta.xml
<CustomField>
    <fullName>Opening_Balance_Date__c</fullName>
    <label>Opening Balance Date</label>
    <type>Date</type>
</CustomField>