force-app/main/default/objects/Person_Fund__c/fields/Total_Collected__c.field-meta.xml
<CustomField>
    <fullName>Total_Collected__c</fullName>
    <label>Total Collected</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>