force-app/main/default/objects/Person_Fund__c/fields/Total_Mfr_Paid__c.field-meta.xml
<CustomField>
    <fullName>Total_Mfr_Paid__c</fullName>
    <label>Total Mfr Paid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>